# phalanx

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  EXECUTION_PLAN.md  LICENSE  Makefile  PLAN.md  README.md  RUNNING.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  ledger.json  main.py  pyproject.toml  runtime_proof_s4.json  runtime_proof_synthetic.json  soak-runs.jsonl  soak-state.json  test_main.py
.claude/: settings.json
.claude/commands/: deploy.md  fix-and-deploy.md  logs.md  status.md  test.md
.github/workflows/: ci.yml
alembic/: alembic.ini  env.py
alembic/versions/: 20260317_0001_initial_schema.py  20260321_0001_add_dag_columns.py  20260321_0002_add_enricher_columns.py  20260322_0001_add_slack_threading.py  20260406_0001_add_demos.py  20260407_0001_agent_traces.py  20260408_0001_ci_fixer.py  20260411_0001_add_run_workspace_path.py  20260412_0001_ci_fixer_p1.py  20260412_0002_ci_fixer_p2.py  20260412_0003_ci_fixer_p3.py  20260412_0004_ci_fixer_p4.py  20260412_0005_ci_fixer_p5.py  (+12 more)
configs/: guardrails.yaml  project.yaml  team.yaml  workflow.yaml
docs/: MULTI_AGENT_CI_FIXER.md  agent-prompts-2026-05-04.md  api-cost-audit.md  audit-2026-05-03-cifixer-v3.md  audit-open-decisions.md  builder-git-conflict-strategy.md  ci-fixer-v2-live-run.md  ci-fixer-v2-spec.md  ci-fixer-v3-agent-contracts.md  ci-fixer-v3-agentic-sre.md  ci-fixer-v3-canary-retro.md  ci-fixer-v3-webhook-coordination.md  deployment.md  dod-met-humanize-path1-2026-05-03.md  external-oss-proof-2026-05-05.md  maddie-site-fixes.md  phase-2c-observation-plan-2026-05-07.md  phase2-streaming-builder.md  phase2-validation-report-2026-05-03.md  sandbox_pool_design.md  soak-cap-2026-05-04.md  v1.7.2.4-soak-plan.md  v1.7.2.4-validation-evidence.md  v1.7.2.7-humanize-paths-2026-05-04.md  v1.7.2.7-mini-soak-2026-05-04.md  v1.7.2.9-path3-inflect-2026-05-05.md  v1.7.3-consolidated-proof-2026-05-07.md  v1.7.3-ledger-mvp-2026-05-06.md  v1.7.3-runtime-hardening-2026-05-06.md  v15-to-7p5-sprint.md  v17-architecture-gaps.md  v17-tl-as-planner.md  v171-provisioning-tiers.md  v172-sandbox-hardening.md  v3-roadmap-to-marketplace.md
forge/: __init__.py
kanban-board/: .dockerignore  RUNNING.md  SETUP.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
kanban-board/alembic/: env.py
kanban-board/alembic/versions/: 0001_initial_schema.py  0002_add_user_display_name_avatar.py
kanban-board/backend/: .env.example  Dockerfile  entrypoint.sh  requirements.txt
kanban-board/backend/app/: __init__.py  config.py  database.py  main.py
kanban-board/backend/app/auth/: __init__.py  dependencies.py  jwt.py
kanban-board/backend/app/models/: __init__.py  board.py  card.py  column.py  user.py  workspace.py  workspace_member.py
kanban-board/backend/app/routes/: auth.py  boards.py  cards.py  columns.py  websocket.py  workspaces.py
kanban-board/backend/app/schemas/: auth.py  board.py  card.py  column.py  workspace.py
kanban-board/backend/app/services/: auth.py  permissions.py  position.py  websocket.py
kanban-board/backend/scripts/: __init__.py  seed.py
kanban-board/backend/tests/: __init__.py  conftest.py  test_auth.py  test_auth_jwt.py  test_boards.py  test_cards.py  test_cards_get.py  test_columns.py  test_database_session.py  test_models.py  test_workspace_schemas.py  test_workspaces.py
kanban-board/frontend/: Dockerfile  SETUP.md  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
kanban-board/frontend/src/: App.tsx  index.css  main.tsx
kanban-board/frontend/src/api/: client.ts
kanban-board/frontend/src/components/: AddCardForm.tsx  AddColumnButton.tsx  CardComponent.tsx  ColumnHeader.tsx  Layout.tsx  Modal.tsx  ProtectedRoute.tsx
kanban-board/frontend/src/contexts/: AuthContext.tsx
kanban-board/frontend/src/hooks/: useAuth.ts  useBoards.ts  useCards.ts  useColumns.ts  useWorkspaceMembers.ts  useWorkspaces.ts
kanban-board/frontend/src/pages/: BoardPage.tsx  LoginPage.tsx  RegisterPage.tsx  WorkspaceDetailPage.tsx  WorkspacesPage.tsx
kanban-board/frontend/src/types/: auth.ts  board.ts  workspace.ts
kanban-board/frontend/tests/: AddCardForm.test.tsx  App.test.tsx  AuthContext.test.tsx  CardComponent.test.tsx  ColumnHeader.test.tsx  Layout.test.tsx  LoginPage.test.tsx  ProtectedRoute.test.tsx  RegisterPage.test.tsx  apiClient.test.ts  setup.ts  useBoards.test.ts  useWorkspaces.test.ts
kanban-board/tests/: __init__.py  conftest.py  test_auth_routes.py  test_config.py  test_database.py  test_health.py  test_models.py  test_schemas.py  test_seed.py  test_services_auth.py  test_services_permissions.py  test_services_position.py
nginx/: nginx.conf  nginx.demos.conf  nginx.prod.conf
phalanx/: __init__.py  sim_test_scratch.py
salon-booking/backend/: pyproject.toml  seed.py
salon-booking/backend/app/: __init__.py  database.py  main.py
salon-booking/backend/app/models/: __init__.py  appointment.py  base.py  service.py  staff.py  staff_schedule.py
salon-booking/backend/app/routes/: appointments.py  dashboard.py  services.py  staff.py
salon-booking/backend/app/schemas/: __init__.py  appointment.py  dashboard.py  service.py  staff.py
salon-booking/backend/app/services/: conflict.py
scripts/: bootstrap_server.sh  demo_seed.py  deploy_website.sh  dry_run_verification.py  e2e_dummy.py  e2e_simulate.py  generate_scorecard.py  generate_sitemap.py  harvest_ci_fixtures.py  init-db.sql  prod_simulate.py  record_fixture.sh  run_simulation_suite.py  seed_team.py  sim_ci_fixer.py  sim_ci_fixer_github.py  soak_event_flagger.sh  v1730_runtime_hardening_proof.py  v17_tl_corpus_demo.py  v2_python_regression.sh  v3_path1_humanize_tz.sh  v3_path2_humanize_intword.sh  v3_python_regression.sh  v3_soak_runner.py  validate_config.py  validate_skills.py
site/: index.html
site-next/: .gitignore  PLAN.md  SETUP.md  jest.config.ts  package.json  tailwind.config.ts  tsconfig.json
skill-registry/: index.yaml
tests/: conftest.py  test_main.py
wordpress-site/: .env.example  .gitignore  docker-compose.yml
(+530 files in other folders)
